# mikeio

./: .buildinfo  .gitattributes  .gitignore  .lycheeignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dependencies.md  LICENSE.txt  License.txt  MANIFEST.in  Makefile  QA_STRATEGY.md  README.md  Untitled.ipynb  api.html  conftest.py  data-structures.html  dataarray.html  dataset.html  design.html  design.ipynb  dfs-overview.html  dfs0.html  dfs1.html  dfs123.html  dfs2.html  dfs3.html  dfsu-1dv-vertical-column.html  dfsu-2d.html  dfsu-2dv-vertical-profile.html  dfsu-3d.html  dfsu-mesh-overview.html  dfsu-spectral.html  dfsu.html  eum.html  generic.html  (+34 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
CLR/: pythonnet-2.3.0-cp27-cp27m-win32.whl  pythonnet-2.3.0-cp27-cp27m-win_amd64.whl  pythonnet-2.3.0-cp35-cp35m-win32.whl  pythonnet-2.3.0-cp35-cp35m-win_amd64.whl  pythonnet-2.3.0-cp36-cp36m-win32.whl  pythonnet-2.3.0-cp36-cp36m-win_amd64.whl  pythonnet-2.4.0.dev0-cp37-cp37m-win32.whl  pythonnet-2.4.0.dev0-cp37-cp37m-win_amd64.whl
_modules/: index.html  mikeio.html
_sources/: api.rst.txt  dataarray.md.txt  dataset.md.txt  dataset.rst.txt  dfs0.md.txt  dfs0.rst.txt  dfs123.md.txt  dfs2.md.txt  dfsu-1dv-vertical-column.md.txt  dfsu-2d.md.txt  dfsu-mesh-overview.md.txt  dfsu-spectral.md.txt  dfsu.rst.txt  eum.md.txt  generic.md.txt  generic.rst.txt  getting-started.md.txt  getting_started.md.txt  index.md.txt  intro.md.txt  intro.rst.txt  understanding_dataset.rst.txt
adr/: 001-numpy-data-backend.md  002-mikecore-over-pythonnet.md  003-dataset-dataarray-pattern.md  004-geometry-abstraction.md  005-factory-pattern-open.md  006-matplotlib-style-plotting.md  007-pfs-module.md  008-pandas-time-index.md  009-item-attribute-access.md  009-no-generic-dataarray.md  010-no-generic-dataarray.md
api/: DataArray.html  DataArray.ipynb  Dataset.html  Dataset.ipynb  Dfs0.html  Dfs0.ipynb  Dfs1.html  Dfs1.ipynb  Dfs2.html  Dfs2.ipynb  Dfs3.html  Dfs3.ipynb  Dfsu.html  Dfsu.ipynb  EUMType.html  EUMType.ipynb  EUMUnit.html  EUMUnit.ipynb  Grid1D.html  Grid1D.ipynb  Grid2D.html  Grid2D.ipynb  Grid3D.html  Grid3D.ipynb  ItemInfo.html  ItemInfo.ipynb  Mesh.html  Mesh.ipynb  PfsDocument.html  PfsDocument.ipynb  PfsSection.html  PfsSection.ipynb  dataset.DataArrayPlotter.html  dataset.DataArrayPlotter.ipynb  dataset.DataArrayPlotterFM.html  dataset.DataArrayPlotterFM.ipynb  dataset.DataArrayPlotterFMVerticalColumn.html  dataset.DataArrayPlotterFMVerticalColumn.ipynb  dataset.DataArrayPlotterFMVerticalProfile.html  dataset.DataArrayPlotterFMVerticalProfile.ipynb  (+75 more)
deploy/: mikeio
docs/: .buildinfo  _brand.yml  _llms-head.html  _quarto.yml  _sidebar.yml  api.html  api.rst  conf.py  data-structures.md  data_structures.md  dataarray.md  dataset.md  dataset.rst  design.html  design.md  design.qmd  dfs-overview.md  dfs0.md  dfs0.qmd  dfs0.rst  dfs1.md  dfs1.qmd  dfs123.md  dfs123.rst  dfs2.ipynb  dfs2.md  dfs2.qmd  dfs3.md  dfsu-1dv-vertical-column.md  dfsu-2d.md  dfsu-2dv-vertical-profile.md  dfsu-3d.md  dfsu-mesh-overview.md  dfsu-spectral.md  dfsu.md  dfsu.qmd  dfsu.rst  eum.md  eum.rst  generate_llms_txt.py  (+26 more)
docsrc/: make.bat
examples/: Dfs2-Bathymetry.html  Dfsu-2D-interpolation.html  Generic.html  Generic.ipynb  Time-interpolation.html  Time-interpolation.ipynb  convert_many_csv_to_dfs0.py  create_dfs2_with_many_timesteps.py  csv2dfs0.py  index-listing.json  index.html  index.ipynb
marimo/: Makefile  data_array-arithmetic.ipynb  data_array-arithmetic.py  data_array-dfs123_plotting.ipynb  data_array-dfs123_plotting.py  data_array-dfsu_plotting.ipynb  data_array-dfsu_plotting.py  data_array-masking.ipynb  data_array-masking.py  dataset-add_item.ipynb  dataset-add_item.py  dataset-concat,_merge.ipynb  dataset-concat,_merge.py  dataset-plotting.ipynb  dataset-plotting.py  dfs0-relative_time.py  dfs0-timeseries.py  dfs1-read.py  dfs2-bathymetry.ipynb  dfs2-bathymetry.py  dfs2-boundary.ipynb  dfs2-boundary.py  dfs2-export_to_netcdf.ipynb  dfs2-export_to_netcdf.py  dfs2-global_forecasting_system.ipynb  dfs2-global_forecasting_system.py  dfs2-import_from_ascii.py  dfs2-slicing.ipynb  dfs2-slicing.py  dfs2-snow_compare.py  dfs2-various_types.py  dfs3-basic.py  dfsu-2d_interpolation.ipynb  dfsu-2d_interpolation.py  dfsu-3d_sigma-z.py  dfsu-connectivity.ipynb  dfsu-connectivity.py  dfsu-distance_to_land.ipynb  dfsu-distance_to_land.py  dfsu-export_to_netcdf.ipynb  (+26 more)
mikeio/: README.md  __init__.py  _interpolation.py  _spectral.py  _time.py  _track.py  aggregator.py  base.py  custom_exceptions.py  data_plot.py  data_utils.py  dataarray.py  dataset.py  dfs.py  dfs0.py  dfs0util.py  dfs1.py  dfs2.py  dfs3.py  dfs_util.py  dfsu.py  dfsu_factory.py  dfsu_layered.py  dfsu_spectral.py  dfsutil.py  dotnet.py  dutil.py  eum.py  exceptions.py  generic.py  helpers.py  interpolation.py  mesh.py  pfs.py  res1d.py  spatial.py  spectral_utils.py  track.py  xns11.py  xyz.py
mikeio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 01 - Timeseries.ipynb  02 - Generic.ipynb  03 - Units.ipynb  Aggregator.ipynb  Aggregator_Examples.ipynb  DEV_DataArray_to_new_file.ipynb  DFSU layers.ipynb  DataArray - Arithmetic.ipynb  DataArray - Dfs123 plotting.ipynb  DataArray - Dfsu plotting.ipynb  DataArray - Masking.ipynb  Dataset - Add item.ipynb  Dataset - Combine.ipynb  Dataset - Concat, merge.ipynb  Dataset - plotting.ipynb  Dfs0 - Relative time.ipynb  Dfs0 - Timeseries.ipynb  Dfs1 - Read.ipynb  Dfs2 - Bathymetry.ipynb  Dfs2 - Boundary.ipynb  Dfs2 - Export to netcdf.ipynb  Dfs2 - Global Forecasting System.ipynb  Dfs2 - Import from Ascii.ipynb  Dfs2 - Sea surface temperature.ipynb  Dfs2 - Slicing.ipynb  Dfs2 - Snow Compare.ipynb  Dfs2 - Various types.ipynb  Dfs3 - Basic.ipynb  Dfs3 - Temperature profiles.ipynb  Dfsu - 2D interpolation.ipynb  Dfsu - 3D sigma-z.ipynb  Dfsu - Connectivity.ipynb  Dfsu - Distance to land.ipynb  Dfsu - Export to netcdf.ipynb  Dfsu - Export to shapefile.ipynb  Dfsu - Extract Track.ipynb  Dfsu - Read.ipynb  (+41 more)
(+528 files in other folders)
